--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -3,40 +3,66 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Music VideoTVC-->
         <scene sceneID="rlY-jb-sis">
             <objects>
                 <tableViewController id="7or-xa-Ffj" customClass="MusicVideoTVC" customModule="MusicVideo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="H1T-z0-wQE">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="139" sectionHeaderHeight="28" sectionFooterHeight="28" id="H1T-z0-wQE">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="KZA-GQ-PV0" detailTextLabel="pyN-ux-p9b" style="IBUITableViewCellStyleSubtitle" id="69w-2E-zHs">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="139" id="69w-2E-zHs" customClass="MusicVideoTableViewCell" customModule="MusicVideo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="139"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="69w-2E-zHs" id="Zhm-l4-BnV">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="138"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KZA-GQ-PV0">
-                                            <rect key="frame" x="15" y="5" width="32" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qJE-AP-Yq2">
+                                            <rect key="frame" x="8" y="8" width="150" height="115"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="150" id="9dd-eP-npg"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="musicTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZX4-Ie-owm">
+                                            <rect key="frame" x="174" y="37" width="418" height="86"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pyN-ux-p9b">
-                                            <rect key="frame" x="15" y="25" width="41" height="14"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="rank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVt-9D-XgF">
+                                            <rect key="frame" x="174" y="21" width="42" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="42" id="lcx-ka-Adx"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="MVt-9D-XgF" firstAttribute="top" secondItem="Zhm-l4-BnV" secondAttribute="topMargin" constant="13" id="Fb6-aw-IEz"/>
+                                        <constraint firstItem="ZX4-Ie-owm" firstAttribute="trailing" secondItem="Zhm-l4-BnV" secondAttribute="trailingMargin" id="HjD-tB-Aft"/>
+                                        <constraint firstItem="qJE-AP-Yq2" firstAttribute="bottom" secondItem="ZX4-Ie-owm" secondAttribute="bottom" id="Olr-hD-Kh3"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="MVt-9D-XgF" secondAttribute="bottom" constant="81" id="TKE-pG-0vC"/>
+                                        <constraint firstItem="MVt-9D-XgF" firstAttribute="leading" secondItem="qJE-AP-Yq2" secondAttribute="trailing" constant="16" id="cD7-V3-jPD"/>
+                                        <constraint firstItem="MVt-9D-XgF" firstAttribute="leading" secondItem="ZX4-Ie-owm" secondAttribute="leading" id="hFv-2y-O4i"/>
+                                        <constraint firstItem="qJE-AP-Yq2" firstAttribute="top" secondItem="Zhm-l4-BnV" secondAttribute="topMargin" id="hYx-jY-nx2"/>
+                                        <constraint firstItem="qJE-AP-Yq2" firstAttribute="bottom" secondItem="Zhm-l4-BnV" secondAttribute="bottomMargin" id="iyG-zx-QuS"/>
+                                        <constraint firstItem="ZX4-Ie-owm" firstAttribute="top" secondItem="Zhm-l4-BnV" secondAttribute="topMargin" constant="29" id="rrK-XD-X3j"/>
+                                        <constraint firstItem="qJE-AP-Yq2" firstAttribute="leading" secondItem="Zhm-l4-BnV" secondAttribute="leadingMargin" id="wBI-4z-fqs"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="musicImage" destination="qJE-AP-Yq2" id="0kw-Vd-NOz"/>
+                                    <outlet property="musicTitle" destination="ZX4-Ie-owm" id="XXS-YO-vQh"/>
+                                    <outlet property="rank" destination="MVt-9D-XgF" id="LX1-C6-JgL"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -60,7 +86,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="bEX-xS-tHb">
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackTranslucent" id="bEX-xS-tHb">
                         <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
